--- a/demo/src/main/resources/static/styles.css
+++ b/demo/src/main/resources/static/styles.css
@@ -26,6 +26,7 @@ html, body {
   padding-top: 10px;
 }
 
+/* form of the searchbar */
 .css-input {
   padding: 3px;
   border-style: solid;
@@ -37,18 +38,23 @@ html, body {
   box-shadow: 0px 0px 5px 0px rgba(148, 148, 148, .75);
   background-color: #dbdbdb;
   text-shadow: 0px 0px 1px rgba(42, 42, 42, .26);
+  width: 40%;
 }
 
 .css-input:focus {
   outline: none;
 }
 
+/* search icon */
 .css-input i {
+  float: left;
   padding-left: 5px;
+  padding-top: 5px;
 }
 
+/* input in the search bar */
 .css-input2 {
-  width: auto;
+  width: 80%;
   font-size: 19px;
   height: inherit;
   background-color: #dbdbdb;
@@ -68,6 +74,7 @@ a {
   text-decoration: none;
 }
 
+/* main of all pages */
 .main {
   height: 400px;
   width: inherit;
@@ -77,6 +84,8 @@ a {
   text-align: center;
 }
 
+
+/* movie.html moviemain */
 #moviemain {
   background-image: linear-gradient(rgba(29, 29, 29, 0.65) 0px, rgb(29, 29, 29) 100%), url("images/park.jpg");
   height: auto;
@@ -87,12 +96,12 @@ a {
   margin-bottom: 20px;
 }
 
-#moviemain .bookmarkicon{
-  float:right;
+#moviemain .bookmarkicon {
+  float: right;
   padding-right: 20px;
 }
 
-#moviemain .bookmarkicon:hover{
+#moviemain .bookmarkicon:hover {
   cursor: pointer;
 }
 
@@ -100,7 +109,7 @@ a {
   margin: 0;
   padding: 10px;
 }
-
+/* index.html */
 .homeh1 {
   padding-top: 100px;
 }
@@ -126,7 +135,7 @@ a {
 .main form p {
   width: 30%;
 }
-
+/* login and register form */
 .main form input {
   display: inline-block;
   -webkit-box-sizing: content-box;
@@ -157,6 +166,7 @@ a {
   outline: none;
 }
 
+/* login register button */
 .login-register {
   display: inline-block;
   -webkit-box-sizing: content-box;
@@ -186,6 +196,8 @@ a {
   width: 15%;
 }
 
+
+/* footer of all pages */
 footer {
   text-align: center;
   padding-top: 20px;
@@ -193,6 +205,8 @@ footer {
   background-color: #000400;
 }
 
+
+/* movies dropdown */
 .dropdown-content {
   display: none;
   margin-top: 6px;
@@ -204,10 +218,13 @@ footer {
   z-index: 1;
 }
 
+/* to show dropdown content */
 .show {
   display: block;
 }
 
+
+/* .movie div of dropdown-content movies*/
 .movie {
   background-color: black;
   /* height: 30%; */
@@ -240,10 +257,9 @@ hr {
   margin: 0;
 }
 
-
-#mybookmarksmain{
+#mybookmarksmain {
   height: auto;
-min-height: 100%;
+  min-height: 100%;
 }
 
 .mybookmarks {
@@ -259,32 +275,33 @@ min-height: 100%;
   text-align: center;
 }
 
+/* mybookmarks div fro everymovie */
 .mybookmarks>div {
   text-align: center;
 }
 
-.mybookmarks .poster{
+.mybookmarks .poster {
   grid-area: poster;
 }
 
- .mybookmarks .deleteicon{
+.mybookmarks .deleteicon {
   width: 10%;
   height: 10%;
   padding-left: 0;
   padding-right: 200px;
 }
 
-.mybookmarks .deleteicon:hover{
+.mybookmarks .deleteicon:hover {
   cursor: pointer;
   opacity: 50%;
 }
 
 .mybookmarks img {
-  height:200px;
+  height: 200px;
   padding-left: 100px;
 }
 
-.mybookmarks h3{
+.mybookmarks h3 {
   grid-area: title;
 }
 
@@ -298,15 +315,94 @@ min-height: 100%;
   border: 1px solid lightblue;
 }
 
-
-.mybookmarks a:hover{
-  color:lightblue;
+.mybookmarks a:hover {
+  color: lightblue;
 }
-
-
 
 #mybookmarksmain {
   background-image: linear-gradient(rgba(29, 29, 29, 0.65) 0px, rgb(29, 29, 29) 100%), url("images/park.jpg");
+}
+
+
+/* toast for adding and deleting bookmark */
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  font-size: 17px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+/* FAIL.html to return to index.htmls */
+.backtomain {
+  margin-top: 200px;
+  /* text-decoration: underline; */
+}
+
+.backtomain:hover {
+  color: lightblue;
 }
 
 @media only screen and (min-width: 900px) {
@@ -318,9 +414,9 @@ min-height: 100%;
   }
 
   .mobile-buttons {
-    width: 40%;
+    width: 50%;
     padding-top: 20px;
-    padding-left: 58%;
+    padding-left: 50%;
     padding-bottom: 5px;
     font-size: 20px;
   }
@@ -357,6 +453,7 @@ min-height: 100%;
     width: 10%;
   }
 
+  /* MOVIE.HTML */
   #moviemain {
     display: grid;
     grid-template-areas:
@@ -379,7 +476,7 @@ min-height: 100%;
     padding-top: 100px;
     padding-bottom: 100px;
     font-size: 40px;
-    font-style: oblique;
+    /* font-style: oblique; */
   }
 
   #moviemain .img {
@@ -392,7 +489,6 @@ min-height: 100%;
     grid-area: paragraph;
     font-size: 14px;
     padding-right: 30%;
-
   }
 
   #moviefooter {
@@ -405,12 +501,11 @@ min-height: 100%;
     padding-bottom: 20px;
   }
 
-  .mybookmarks .deleteicon{
+  .mybookmarks .deleteicon {
     margin-bottom: 4%;
   }
 
-
-  .mybookmarks h3{
+  .mybookmarks h3 {
     font-size: 30px;
   }
 
